updates rinkeby master address ; approve token modal z-index fixed ; minor UI imporovemts

--- a/src/components/WalletInfo/WalletInfo.scss
+++ b/src/components/WalletInfo/WalletInfo.scss
@@ -62,6 +62,6 @@
 
 @media only screen and (max-width: $mobile-breakpoint) {
   .wallet-info-wrapper {
-    margin-right: auto;
+    margin: auto;
   }
 }
