--- a/src/styles/DepositWithdraw/ApproveToken.scss
+++ b/src/styles/DepositWithdraw/ApproveToken.scss
@@ -2,7 +2,7 @@
 
 .approve-token-backdrop {
   position: fixed;
-  z-index: 4;
+  z-index: 5;
   width: 100%;
   height: 100%;
   top: 0;
@@ -58,6 +58,16 @@
       background: transparent;
       color: $white;
       text-decoration: underline;
+    }
+  }
+}
+
+@media only screen and (max-width: $mobile-breakpoint) {
+  .approve-token-backdrop {
+    .approve-token-content {
+      height: 100%;
+      justify-content: center;
+      padding: $modal-element-padding-mobile;
     }
   }
 }
